# hear-embed

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: _run.sh  check_torch_free.py  guard_paths.py
.github/workflows/: ci.yml
hear_embed/: __init__.py  audio.py  cli.py  embedder.py  pipeline.py
hear_embed/_vendor/: __init__.py
hear_pipeline/: __init__.py  cli.py  embedder.py  pipeline.py  writers.py
hear_pipeline/_vendor/: audio_utils.py
tests/: conftest.py  test_audio.py  test_audio_io.py  test_ci_workflow.py  test_cli.py  test_hooks.py  test_model_smoke.py  test_packaging.py  test_pipeline.py  test_writers.py
