[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hear-embed"
version = "0.1.0"
description = "Embed health-acoustic recordings with the Google HeAR model."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
# The audio/IO pipeline (loading, windowing, writing) needs only these. The
# HeAR encoder's heavy deps (torch, transformers) live in the `model` group
# below — installed by default locally, skippable in CI — so lint + the
# numpy-only logic tests don't drag in a torch install.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
    "pyarrow>=14",
    "huggingface-hub>=0.23",
    "tqdm>=4.66",
]

[project.scripts]
hear-embed = "hear_embed.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8",
    "ruff>=0.15.17",
    "ty>=0.0.48",
]
# The HeAR encoder's runtime deps. Split into a group so CI can skip them with
# `uv sync --no-group model`. transformers is pinned: google/hear-pytorch is
# exported against this release.
model = [
    "torch>=2.1",
    "transformers==4.50.3",
]

[tool.uv]
# Install both groups by default locally, so `uv sync` still gives a working
# embedder. CI's lint-and-test job overrides this with `--no-group model`.
default-groups = ["dev", "model"]

# On Linux, PyPI's default torch is the CUDA build plus several GB of nvidia-*
# deps, which CI's typecheck job doesn't need just to give ty an importable
# torch. Resolve Linux torch from the PyTorch CPU index instead; macOS keeps
# PyPI's CPU/Metal wheels. For CUDA on Linux, swap this index per uv's PyTorch
# guide: https://docs.astral.sh/uv/guides/integration/pytorch/
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.hatch.build.targets.wheel]
packages = ["hear_embed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Fail on any unregistered marker (catches typos instead of silently never matching).
addopts = ["--strict-markers"]
markers = [
    "model: requires the gated HeAR model + torch/transformers (deselect with -m 'not model')",
]

[tool.ruff]
target-version = "py310"
# Google's audio_utils.py is vendored unmodified — never lint/reformat it.
# force-exclude keeps it excluded even when paths are passed explicitly (pre-commit/CI).
extend-exclude = ["hear_embed/_vendor"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
# Type-check against the minimum supported Python, matching requires-python.
python-version = "3.10"

[tool.ty.src]
# Don't type-check Google's vendored audio_utils.py (kept unmodified upstream).
exclude = ["hear_embed/_vendor"]
