[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hear-embed"
version = "0.1.0"
description = "CLI and Python library for embedding human health acoustics using Google HeAR."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
# Ship the license text in the built distribution (PEP 639). LICENSE covers this
# project; the _vendor copy covers Google's unmodified audio_utils.py.
license-files = ["LICENSE", "hear_embed/_vendor/LICENSE.apache-2.0"]
# Discoverability metadata, mirroring the GitHub repository topics.
keywords = [
    "audio",
    "audio-embeddings",
    "embeddings",
    "health-acoustics",
    "digital-health",
    "machine-learning",
    "deep-learning",
    "pytorch",
    "huggingface",
    "transformers",
    "cli",
]
# Core runtime deps: the audio/IO pipeline (loading, windowing, writing) plus
# the CLI's colorized --help (rich-argparse). The HeAR encoder's heavy deps
# (torch, transformers) live in the `model` group below — installed by default
# locally, skippable in CI — so lint + the torch-free logic tests don't drag in
# a torch install.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
    "pyarrow>=14",
    "huggingface-hub>=0.23",
    "tqdm>=4.66",
    "rich-argparse>=1.8.0",
]

[project.scripts]
hear-embed = "hear_embed.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8",
    # pyyaml: tests/test_ci_workflow.py parses .github/workflows/ci.yml. Declared
    # directly (not leaned on transitively via pre-commit) so the invariant tests
    # always run instead of silently skipping if that transitive dep changes.
    "pyyaml>=6",
    "ruff>=0.15.17",
    "ty>=0.0.48",
]
# The HeAR encoder's runtime deps. Split into a group so CI can skip them with
# `uv sync --no-group model`. transformers is pinned: google/hear-pytorch is
# exported against this release.
model = [
    "torch>=2.1",
    "transformers==4.50.3",
]

[tool.uv]
# Install both groups by default locally, so `uv sync` still gives a working
# embedder. CI's lint-and-test job overrides this with `--no-group model`.
default-groups = ["dev", "model"]

# On Linux, PyPI's default torch is the CUDA build plus several GB of nvidia-*
# deps, which CI's typecheck job doesn't need just to give ty an importable
# torch. Resolve Linux torch from the PyTorch CPU index instead; macOS keeps
# PyPI's CPU/Metal wheels. For CUDA on Linux, swap this index per uv's PyTorch
# guide: https://docs.astral.sh/uv/guides/integration/pytorch/
# Dropping this pin silently reverts Linux CI to the CUDA build, so
# tests/test_packaging.py asserts the index + source stay in place.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.hatch.build.targets.wheel]
packages = ["hear_embed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Fail on any unregistered marker (catches typos instead of silently never matching).
addopts = ["--strict-markers"]
markers = [
    "model: requires the gated HeAR model + torch/transformers (deselect with -m 'not model')",
]

[tool.ruff]
target-version = "py310"
# Google's audio_utils.py is vendored unmodified — never lint/reformat it.
# force-exclude keeps it excluded even when paths are passed explicitly (pre-commit/CI).
extend-exclude = ["hear_embed/_vendor"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.environment]
# Type-check against the minimum supported Python, matching requires-python.
python-version = "3.10"

[tool.ty.src]
# Don't type-check Google's vendored audio_utils.py (kept unmodified upstream).
exclude = ["hear_embed/_vendor"]
